--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Website for IronByte d.o.o.",
   "main": "index.js",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "dev": "nodemon server/index.ts",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "NODE_ENV=production node .next/production-server/index.js"
   },
   "keywords": [
     "ironbyte",
@@ -21,9 +21,24 @@
     "@zeit/next-css": "^0.2.0",
     "@zeit/next-source-maps": "0.0.2",
     "@zeit/next-typescript": "^1.0.1",
+    "apollo-server-express": "^1.3.6",
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "graphql": "^0.13.2",
     "next": "^6.0.3",
     "postcss-css-variables": "^0.8.1",
     "react": "^16.4.0",
-    "react-dom": "^16.4.0"
+    "react-dom": "^16.4.0",
+    "typescript": "^2.8.3"
+  },
+  "devDependencies": {
+    "@types/next": "^2.4.11",
+    "@types/node": "^10.1.2",
+    "@types/react": "^16.3.14",
+    "fork-ts-checker-webpack-plugin": "^0.4.1",
+    "nodemon": "^1.17.5",
+    "ts-node": "^6.0.5",
+    "tslint": "^5.10.0",
+    "tslint-config-airbnb": "^5.9.2"
   }
 }
