--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
   "author": "Nikola Predovan",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-css": "^0.2.0",
     "@zeit/next-source-maps": "0.0.2",
     "@zeit/next-typescript": "^1.0.1",
     "apollo-server-express": "^1.3.6",
+    "babel-plugin-styled-components": "^1.5.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
     "next": "^6.0.3",
-    "postcss-css-variables": "^0.8.1",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "styled-components": "^3.3.0",
     "typescript": "^2.8.3"
   },
   "devDependencies": {
