--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
   "dependencies": {
     "@zeit/next-source-maps": "0.0.2",
     "@zeit/next-typescript": "^1.0.1",
+    "animejs": "^2.2.0",
     "apollo-server-express": "^1.3.6",
-    "babel-plugin-styled-components": "^1.5.1",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "graphql": "^0.13.2",
+    "gsap": "^2.0.1",
     "next": "^6.0.3",
+    "npm": "^6.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "styled-components": "^3.3.0",
@@ -35,6 +37,7 @@
     "@types/next": "^2.4.11",
     "@types/node": "^10.1.2",
     "@types/react": "^16.3.14",
+    "babel-plugin-styled-components": "^1.5.1",
     "fork-ts-checker-webpack-plugin": "^0.4.1",
     "nodemon": "^1.17.5",
     "ts-node": "^6.0.5",
