--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "npm": "^6.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-form": "^3.5.5",
     "styled-components": "^3.3.0",
-    "typescript": "^2.8.3"
+    "typescript": "^2.8.3",
+    "validator": "^10.3.0"
   },
   "devDependencies": {
     "@types/next": "^2.4.11",
