--- a/package.json
+++ b/package.json
@@ -18,32 +18,36 @@
   "author": "Nikola Predovan",
   "license": "ISC",
   "dependencies": {
-    "@zeit/next-source-maps": "0.0.2",
-    "@zeit/next-typescript": "^1.0.1",
+    "@zeit/next-source-maps": "0.0.3",
+    "@zeit/next-typescript": "^1.1.1",
     "animejs": "^2.2.0",
-    "apollo-server-express": "^1.3.6",
+    "apollo-server-express": "^2.3.1",
     "body-parser": "^1.18.3",
-    "express": "^4.16.3",
-    "graphql": "^0.13.2",
-    "gsap": "^2.0.1",
-    "next": "^6.0.3",
+    "express": "^4.16.4",
+    "formik": "^1.4.1",
+    "graphql": "^14.0.2",
+    "next": "^7.0.2",
     "npm": "^6.1.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
-    "react-form": "^3.5.5",
     "styled-components": "^3.3.0",
-    "typescript": "^2.8.3",
-    "validator": "^10.3.0"
+    "typescript": "^3.2.2",
+    "yup": "^0.26.6"
   },
   "devDependencies": {
-    "@types/next": "^2.4.11",
+    "@types/body-parser": "^1.17.0",
+    "@types/express": "^4.16.0",
+    "@types/graphql": "^14.0.3",
+    "@types/next": "^7.0.6",
     "@types/node": "^10.1.2",
     "@types/react": "^16.3.14",
+    "@types/yup": "^0.26.3",
+    "@types/styled-components": "^4.1.4",
     "babel-plugin-styled-components": "^1.5.1",
-    "fork-ts-checker-webpack-plugin": "^0.4.1",
-    "nodemon": "^1.17.5",
-    "ts-node": "^6.0.5",
-    "tslint": "^5.10.0",
-    "tslint-config-airbnb": "^5.9.2"
+    "fork-ts-checker-webpack-plugin": "^0.5.2",
+    "nodemon": "^1.18.9",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.12.0",
+    "tslint-config-prettier": "^1.17.0"
   }
 }
