--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -2,7 +2,10 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "module": "commonjs",
-    "outDir": ".next/production-server/"
+    "outDir": ".next/production-server/",
+    "sourceMap": false,
+    "removeComments": true,
+    "noEmit": false,
   },
   "include": ["server/**/*.ts"]
 }
