--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.16.4",
-    "next": "^7.0.2"
+    "next": "^7.0.2",
+    "yargs": "^12.0.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
