--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon server/index.ts",
-    "build": "next build && tsc --project tsconfig.server.json",
+    "build": "next build && tsc --project tsconfig.server.json && copyfiles config/* .next/production-server/",
     "start": "NODE_ENV=production node .next/production-server/index.js"
   },
   "keywords": [
@@ -18,28 +18,38 @@
   "author": "Nikola Predovan",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "config": "^3.0.1",
     "express": "^4.16.4",
     "next": "^7.0.2",
+    "nodemailer": "^5.0.0",
     "yargs": "^12.0.5"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
     "@types/graphql": "^14.0.3",
     "@types/next": "^7.0.6",
     "@types/node": "^10.1.2",
+    "@types/nodemailer": "^4.6.5",
     "@types/react": "^16.3.14",
+    "@types/react-toastify": "^4.0.1",
     "@types/styled-components": "^4.1.4",
+    "@types/yargs": "^12.0.4",
     "@types/yup": "^0.26.3",
+    "@zeit/next-css": "^1.0.1",
     "@zeit/next-source-maps": "0.0.3",
     "@zeit/next-typescript": "^1.1.1",
     "animejs": "^2.2.0",
     "babel-plugin-styled-components": "^1.5.1",
+    "copyfiles": "^2.1.0",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "formik": "^1.4.1",
     "nodemon": "^1.18.9",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-toastify": "^4.5.1",
     "styled-components": "^3.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.12.0",
