--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "yargs": "^12.0.5"
   },
   "devDependencies": {
+    "@types/animejs": "^2.0.1",
     "@types/body-parser": "^1.17.0",
     "@types/config": "0.0.34",
     "@types/express": "^4.16.0",
@@ -50,6 +51,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-toastify": "^4.5.1",
+    "reset-css": "^4.0.1",
     "styled-components": "^3.3.0",
     "ts-node": "^7.0.1",
     "tslint": "^5.12.0",
